--- a/src/pages/home/style.css
+++ b/src/pages/home/style.css
@@ -46,7 +46,7 @@
     width: 80%;
     display: flex;
     justify-content: center;
-    align-items: center;
+    align-content: center;
     flex-wrap: wrap;
 }
 
