--- a/src/pages/registerNews/style.css
+++ b/src/pages/registerNews/style.css
@@ -1,1 +1,14 @@
 /* RegisterNews Style */
+
+.registerNews {
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.registerNews-main {
+    flex-grow: 1;
+    padding: 10px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
